announcement email beta, text-align fixes

--- a/src/app/other/buy-book/buy-book.component.css
+++ b/src/app/other/buy-book/buy-book.component.css
@@ -7,6 +7,10 @@ button {
     width: 100%;
 }
 
+p {
+    text-align: center;
+}
+
 
 
 
